small mobile device quary add , footer align solve slove

--- a/style/flower.css
+++ b/style/flower.css
@@ -11,6 +11,10 @@
     color: rgba(0, 0, 0, 0.5);
 }
 
+.dark-2 {
+    color: rgba(107, 114, 128, 1);
+}
+
 /* Nav part */
 .n-container {
     max-width: 1140px;
@@ -49,11 +53,6 @@ nav ul a {
 }
 
 /* Banner section */
-/* .banner {
-    display: flex;
-    justify-content: center;
-    max-width: 1140px;
-    margin: 0 auto; */
 .banner {
     display: flex;
     justify-content: space-between;
@@ -287,7 +286,7 @@ nav ul a {
     border: none;
     display: flex;
     justify-content: center;
-   
+
 
 }
 
@@ -342,6 +341,11 @@ footer {
         padding: 0;
     }
 
+    .f-logo {
+        width: 63px;
+        height: 38px;
+    }
+
 
     nav img {
         margin-bottom: 10px;
@@ -356,6 +360,10 @@ footer {
         overflow: hidden;
     }
 
+    .banner-title {
+        font-size: 2.75rem;
+    }
+
     .banner-img {
         width: 100%;
     }
@@ -368,7 +376,7 @@ footer {
 
     .banner-content {
         width: 100%;
-        text-align: center;
+        text-align: left;
         padding: 10px 0;
     }
 
@@ -432,7 +440,7 @@ footer {
     }
 
     .email {
-        flex-direction:row;
+        flex-direction: row;
         /* gap: 10px; */
     }
 
@@ -450,14 +458,29 @@ footer {
     }
 
     /* Footer */
+    /* footer {
+        flex-direction: column;
+        gap: 20px;
+        text-align: left;
+        align-items:flex-start;
+        padding: 20px;
+        margin-left: 0px;
+    } */
     footer {
         flex-direction: column;
-        text-align: center;
+        align-items: flex-start;
+        text-align: left;
+        justify-content: flex-start;
         gap: 20px;
-        padding: 20px;
+        padding: 0px;
+        margin: 0px;
     }
 
     .icons {
-        justify-content: center;
+        justify-content: flex-start;
+    }
+
+    .footer ul {
+        padding-left: 0px;
     }
 }
